menmbaha paragaraf ke3

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Halo welkam bacg du my dudorial</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste vitae commodi, nemo non et corrupti architecto illum recusandae odit unde mollitia magnam obcaecati earum aliquid? Consequuntur, reprehenderit vel. Laboriosam, reiciendis!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aliquam aut at consequatur similique error, dolores animi perspiciatis dolore, perferendis eveniet distinctio inventore labore atque ducimus, quasi amet! Nobis sapiente ea eaque laboriosam amet praesentium dolorum soluta expedita, qui deleniti rerum odit nostrum laudantium veritatis dolor quidem minus perspiciatis est!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, laudantium.</p>
 </body>
 </html>
